SoftX.css
.theme-light {
	--user-popout-bg: hsl(0 0% 100% / 0.25);
	--user-popout-text: black;
}

.theme-dark {
	--user-popout-bg: hsl(0 0% 0% / 0.25);
	--user-popout-text: white;
}

:root {
	--softx-version: "1.1.21";
	--hue: 0deg;
	--saturation: 0%;
	--lightness: 10%;
	--transition: 0.15s ease;
	--chat-glow-intensity: var(--glow-intensity);
	--channel-glow-intensity: var(--glow-intensity);
	--members-glow-intensity: var(--glow-intensity);
	--input-glow-intensity: var(--glow-intensity);
	--server-glow-intensity: var(--glow-intensity);
	--talking-bar: rgb(var(--accent));
	--talking-glow: rgb(var(--accent));
	--blur: 10px;
	--TB-height: calc(var(--toolbar-height) - 1px);
	--TB-width: 52px;
	--TB-header-padding: 155px !important;
	--shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -1px rgb(0 0 0 / 0.06);
	--shadow-lg: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 10px 10px -5px rgb(0 0 0 / 0.04);
	--border: hsl(var(--hue) var(--saturation) calc(var(--lightness) / 2) / 0.6);
	--bg-primary: hsl(var(--hue) var(--saturation) var(--lightness) / calc(var(--opacity) + 0.05));
	--bg-secondary: hsl(var(--hue) var(--saturation) var(--lightness) / calc(var(--opacity) + 0.1));
	--bg-tertiary: hsl(var(--hue) var(--saturation) var(--lightness) / calc(var(--opacity) + 0.15));
	--fg-primary: hsl(0 0% 100% / 0.1);
	--fg-secondary: hsl(0 0% 100% / 0.05);
	--chat-bubble-bg: rgba(255, 255, 255, 0.03);
	--chat-bubble-bg-self: rgb(var(--accent), 0.15);
	--chat-bubble-padding: 10px 14px;
	--chat-bubble-display: inline-block;
	--user-area: calc(var(--server-size) + 175px);
	--toolbar-height: 74px;
	--server-spacing: 12px;
	--guild-scrollbar: none;
	--unread-colour: 255 255 255;
	--backdrop-background: var(--bg-primary);
	--backdrop-blur: 10px;
	--channel-height: 40px;
	--member-height: 54px;
	--dm-height: 56px;
	--scrollbar-background: rgb(255 255 255 / 0.05);
	--scrollbar-background-hover: rgb(255 255 255 / 0.1);
	--scrollbar-background-active: rgb(255 255 255 / 0.15);
	--input-background: rgb(18 18 18 / 0.7);
	--input-border: rgb(255 255 255 / 0.05);
	--discord-red: 359 calc(var(--saturation-factor, 1) * 82.6%) 59.4%;
	--discord-green: 139 calc(var(--saturation-factor, 1) * 47.3%) 43.9%;
	--settings-sidebar-width: 300px;
	--settings-content-width: 900px;
	--settings-max-height: 800px;
	--settings-max-width: calc(var(--settings-sidebar-width) + var(--settings-content-width));
	--text-link: rgb(var(--accent));
	--font-primary: var(--font, "Whitney");
	--font-display: var(--font, "Whitney");
	--channels-default: #aaa;
	--background-modifier-hover: rgb(255 255 255 / 0.05);
	--background-modifier-active: rgb(255 255 255 / 0.08);
	--brand-experiment: rgb(var(--accent), 0.35);
	--brand-experiment-560: rgb(var(--accent), 0.55);
	--brand-experiment-600: rgb(var(--accent), 0.4);
}

html,
  span:not([class*=spinner-]):not([class*=spinnerItem]) {
	backface-visibility: hidden;
}

body,
  #app-mount,
  .app__00c92 {
	background: transparent;
}

.bg__7adbf {
	background-image: var(--background-image);
	background-color: transparent;
	background-attachment: var(--background-attachment, fixed);
	background-size: var(--background-size, cover);
	background-position: var(--background-position, center);
	filter: blur(var(--background-blur, 0px)) hue-rotate(var(--background-hue, 0deg));
}

.content__1a4fe::before {
	content: none;
}

html.theme-light .app__00c92::after {
	content: "SoftX is not build for Lightmode.\aPlease switch to Dark mode in your Discord Appearance Settings.";
	line-height: 1.5;
	white-space: pre-wrap;
	border-top: 1px solid var(--border);
	background: var(--bg-secondary);
	z-index: 1;
	padding: 16px;
	color: #fff;
}

html.theme-light .container_ca50b9 {
	bottom: 81px !important;
}

.full-motion [class*=animator] {
	transform: none !important;
	transition: none !important;
}

.layer_e552e0.baseLayer__13b6b {
	transform: scale(1) !important;
	opacity: 1 !important;
}

.layer_e552e0:not(.baseLayer__13b6b) .info__755e1 > span:first-child::before {
	display: block;
	content: "SoftX v" var(--softx-version);
	text-transform: none;
}

#app-mount .container__11d72 {
	background: var(--bg-primary);
	height: var(--toolbar-height);
	padding-left: 24px;
	border-bottom: 1px solid var(--border);
}

#app-mount .container__11d72 path[d="M5.43309 21C5.35842 21 5.30189 20.9325 5.31494 20.859L5.99991 17H2.14274C2.06819 17 2.01168 16.9327 2.02453 16.8593L2.33253 15.0993C2.34258 15.0419 2.39244 15 2.45074 15H6.34991L7.40991 9H3.55274C3.47819 9 3.42168 8.93274 3.43453 8.85931L3.74253 7.09931C3.75258 7.04189 3.80244 7 3.86074 7H7.75991L8.45234 3.09903C8.46251 3.04174 8.51231 3 8.57049 3H10.3267C10.4014 3 10.4579 3.06746 10.4449 3.14097L9.75991 7H15.7599L16.4523 3.09903C16.4625 3.04174 16.5123 3 16.5705 3H18.3267C18.4014 3 18.4579 3.06746 18.4449 3.14097L17.7599 7H21.6171C21.6916 7 21.7481 7.06725 21.7353 7.14069L21.4273 8.90069C21.4172 8.95811 21.3674 9 21.3091 9H17.4099L17.0495 11.04H15.05L15.4104 9H9.41035L8.35035 15H10.5599V17H7.99991L7.30749 20.901C7.29732 20.9583 7.24752 21 7.18934 21H5.43309Z"] {
	d: path("M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z");
	fill: transparent;
	stroke: var(--interactive-normal);
	stroke-width: 2px;
}
/* ... */

